--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -2,17 +2,11 @@
   <h5>Fikir Geliştir</h5>
 </div>
 <div class="row">
-  <div
-    class="col"
-    *ngFor="let detail of template.templateDetail; let i = index"
-  >
-    <div
-      class="row"
-      *ngIf="
+  <div class="col" *ngFor="let detail of template.templateDetail; let i = index">
+    <div class="row" *ngIf="
         template.templateDetail.length >= 1 &&
         template.templateDetail[0].header != ''
-      "
-    >
+      ">
       <div class="col-md-12">
         <div class="card text-center p-3">
           <div class="card-body">
@@ -27,11 +21,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
-          <textarea
-            class="form-control textarea"
-            [(ngModel)]="inputText[detail.id]"
-            (keydown.enter)="sendMessage(detail.id)"
-          ></textarea>
+          <textarea class="form-control textarea" [(ngModel)]="inputText[detail.id]"
+            (keydown.enter)="sendMessage(detail.id)"></textarea>
         </div>
       </div>
     </div>
@@ -52,11 +43,7 @@
 
 <div class="row">
   <div class="col-md-3 offset-9">
-    <button
-      type="button"
-      (click)="nextComment()"
-      class="btn btn-round btn-success btn-block btn-lg float-right"
-    >
+    <button type="button" (click)="nextComment()" class="btn btn-round btn-success btn-block btn-lg float-right">
       Yorumla
     </button>
   </div>
