--- a/src/app/workshop/schema/schema.component.html
+++ b/src/app/workshop/schema/schema.component.html
@@ -16,7 +16,6 @@
   </div>
 </div>
 
-
 <div class="row" *ngIf="templates.length > 0">
   <div class="col-md-3" *ngFor="let template of templates; let i = index">
     <button
@@ -91,7 +90,7 @@
             <div class="col-sm-6">
               <button
                 type="button"
-                class="btn btn-primary mb-2 float-right"
+                class="btn btn-primary btn-round mb-2 float-right"
                 (click)="addHeader()"
               >
                 <i class="nc-icon nc-simple-add"></i>
@@ -141,7 +140,8 @@
                       <label></label>
                       <button
                         type="button"
-                        class="btn btn-danger btn-sm float-right"
+                        class="btn btn-danger btn-round btn-sm float-right"
+                        style="margin-top: 20px !important"
                         (click)="removeHeader(i)"
                       >
                         <i class="nc-icon nc-simple-remove"></i>
