--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -37,7 +37,7 @@
 
           <div
             class="alert alert-primary fade show"
-            *ngFor="let categoryMessage of item.categoryMessages"
+            *ngFor="let categoryMessage of item.messages"
           >
             <span
               ><i class="nc-icon nc-bulb-63"></i>
