--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -1,12 +1,29 @@
 <div class="card-title">
-  <h5>Fikir Geliştir</h5>
+  <div class="row">
+    <div class="col-sm-6"><h5>Fikir Geliştir</h5></div>
+    <div class="col-sm-6">
+      <h5
+        *ngIf="retroRight != null"
+        class="float-right"
+        [ngClass]="retroRight.ideaRight > 0 ? 'text-success' : 'text-danger'"
+      >
+        Fikir Hakkı:{{ retroRight.ideaRight }}
+      </h5>
+    </div>
+  </div>
 </div>
 <div class="row">
-  <div class="col" *ngFor="let detail of template.templateDetail; let i = index">
-    <div class="row" *ngIf="
+  <div
+    class="col"
+    *ngFor="let detail of template.templateDetail; let i = index"
+  >
+    <div
+      class="row"
+      *ngIf="
         template.templateDetail.length >= 1 &&
         template.templateDetail[0].header != ''
-      ">
+      "
+    >
       <div class="col-md-12">
         <div class="card text-center p-3">
           <div class="card-body">
@@ -21,8 +38,12 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
-          <textarea class="form-control textarea" [(ngModel)]="inputText[detail.id]"
-            (keydown.enter)="sendMessage(detail.id)"></textarea>
+          <textarea
+            [disabled]="retroRight.ideaRight <= 0"
+            class="form-control textarea"
+            [(ngModel)]="inputText[detail.id]"
+            (keydown.enter)="sendMessage(detail.id)"
+          ></textarea>
         </div>
       </div>
     </div>
@@ -43,7 +64,11 @@
 
 <div class="row">
   <div class="col-md-3 offset-9">
-    <button type="button" (click)="nextComment()" class="btn btn-round btn-success btn-block btn-lg float-right">
+    <button
+      type="button"
+      (click)="nextComment()"
+      class="btn btn-round btn-success btn-block btn-lg float-right"
+    >
       Yorumla
     </button>
   </div>
