--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -55,9 +55,7 @@
                 href="#categorize"
                 role="tablist"
               >
-                <i class="now-ui-icons shopping_shop">
-
-                </i> Kategorize Et
+                <i class="now-ui-icons shopping_shop"> </i> Kategorize Et
               </a>
             </li>
             <li class="nav-item">
@@ -117,7 +115,7 @@
               <comments-cmp></comments-cmp>
             </div>
             <div class="tab-pane" id="categorize">
-             <app-categorized-cmp></app-categorized-cmp>
+              <app-categorized-cmp></app-categorized-cmp>
             </div>
             <div class="tab-pane" id="vote">
               <comments-cmp></comments-cmp>
