--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -118,7 +118,7 @@
               <app-categorized-cmp></app-categorized-cmp>
             </div>
             <div class="tab-pane" id="vote">
-              <comments-cmp></comments-cmp>
+              <app-vote-cmp></app-vote-cmp>
             </div>
             <div class="tab-pane" id="idea-archive"></div>
           </div>
