--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -76,8 +76,7 @@
 <div class="row">
   <div class="col-md-3 offset-9">
     <button
-      data-toggle="modal"
-      data-target="#categorizeModal"
+     
       (click)="selectMessage()"
       class="btn btn-round btn-success btn-block btn-lg float-right"
     >
@@ -160,7 +159,7 @@
           </div>
           <div class="divider"></div>
           <div class="right-side">
-            <button type="submit" class="btn btn-success btn-link">
+            <button type="submit" (click)="Vote()" class="btn btn-success btn-link">
               Oluştur
             </button>
           </div>
