--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -76,7 +76,7 @@
                 href="#idea-archive"
                 role="tablist"
               >
-                <i class="now-ui-icons ui-2_settings-90"></i> Fikir Arşivle
+                <i class="now-ui-icons ui-2_settings-90"></i>Raporla
               </a>
             </li>
           </ul>
@@ -120,7 +120,9 @@
             <div class="tab-pane" id="vote">
               <app-vote-cmp></app-vote-cmp>
             </div>
-            <div class="tab-pane" id="idea-archive"></div>
+            <div class="tab-pane" id="idea-archive">
+              <app-report-cmp></app-report-cmp>
+            </div>
           </div>
         </div>
       </div>
