--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="sidebar-wrapper">
-  <div class="user">
+  <!-- <div class="user">
     <div class="photo">
       <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" />
     </div>
@@ -44,7 +44,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- <div *ngIf="isNotMobileMenu()">
         <form class="navbar-form navbar-left navbar-search-form" role="search">
             <div class="input-group">
