--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -57,15 +57,8 @@
         </div>
       </form>
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link btn-magnify" href="#pablo">
-            <i class="nc-icon nc-layout-11"></i>
-            <p>
-              <span class="d-lg-none d-md-block">Stats</span>
-            </p>
-          </a>
-        </li>
-        <li class="nav-item btn-rotate dropdown">
+
+        <li class="nav-item  dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="pablo"
@@ -76,26 +69,48 @@
           >
             <i class="nc-icon nc-bell-55"></i>
             <p>
-              <span class="d-lg-none d-md-block">Some Actions</span>
+              <span class="d-lg-none d-md-block">Bildirimler</span>
             </p>
           </a>
           <div
             class="dropdown-menu dropdown-menu-right"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="#">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir.</a>
+            <a class="dropdown-item" href="#">Yaygın inancın tersine, Lorem Ipsum rastgele sözcüklerden oluşmaz.</a>
+            <a class="dropdown-item" href="#">Yinelenen bir sayfa içeriğinin okuyucunun dikkatini dağıttığı bilinen bir gerçektir. </a>
+           
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link btn-rotate" href="#pablo">
-            <i class="nc-icon nc-settings-gear-65"></i>
-            <p>
-              <span class="d-lg-none d-md-block">Account</span>
-            </p>
+
+        <li class="nav-item  dropdown">
+          
+          <a
+            class="nav-link dropdown-toggle"
+            href="pablo"
+            id="navbarDropdownMenuLink"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            
+            
+              <span class="text-danger">
+              Hoşgeldin,  {{userName}}
+              </span>
+           
           </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdownMenuLink"
+          >
+            <a class="dropdown-item" href="#">Ayarlar</a>
+            <a class="dropdown-item " (click)="logout()" >Çıkış Yap</a>
+
+           
+          </div>
         </li>
+        
       </ul>
     </div>
   </div>
