--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -3,79 +3,49 @@
     <div class="col-md-12 ml-auto mr-auto">
       <div class="card card-plain card-subcategories">
         <div class="card-body">
-          <ul
-            class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress"
-            role="tablist"
-          >
+          <ul class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress"
+            role="tablist">
             <li class="nav-item active">
-              <a
-                class="nav-link select-subject"
-                data-toggle="tab"
-                href="#subject"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link select-subject" data-toggle="tab" href="#subject"
+                role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Konu Seç
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link select-template"
-                data-toggle="tab"
-                href="#select-template"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link select-template" data-toggle="tab"
+                href="#select-template" role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Şablon Seç
               </a>
             </li>
 
             <li class="nav-item">
-              <a
-                class="nav-link brainstorm"
-                data-toggle="tab"
-                href="#brainstorm"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link brainstorm" data-toggle="tab" href="#brainstorm"
+                role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Fikir Geliştir
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link comments"
-                data-toggle="tab"
-                href="#comments"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link comments" data-toggle="tab" href="#comments"
+                role="tablist">
                 <i class="now-ui-icons shopping_shop"></i> Yorum Yap
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link categorize"
-                data-toggle="tab"
-                href="#categorize"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link categorize" data-toggle="tab" href="#categorize"
+                role="tablist">
                 <i class="now-ui-icons shopping_shop"> </i> Kategorize Et
               </a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link multi-vote"
-                data-toggle="tab"
-                href="#vote"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link multi-vote" data-toggle="tab" href="#vote"
+                role="tablist">
                 <i class="now-ui-icons ui-2_settings-90"></i> Oyla
               </a>
             </li>
 
             <li class="nav-item">
-              <a
-                class="nav-link idea-archive"
-                data-toggle="tab"
-                href="#idea-archive"
-                role="tablist"
-              >
+              <a [ngClass]="{'disabled': true }" class="nav-link idea-archive" data-toggle="tab" href="#idea-archive"
+                role="tablist">
                 <i class="now-ui-icons ui-2_settings-90"></i>Raporla
               </a>
             </li>
