--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -62,7 +62,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row"  *ngIf="!isUser">
   <div class="col-md-3 offset-9">
     <button
       type="button"
