--- a/src/app/workshop/comments/comments.component.html
+++ b/src/app/workshop/comments/comments.component.html
@@ -64,6 +64,19 @@
   </div>
 </div>
 
+<div class="row" *ngIf="!isUser"  >
+  <div class="col-md-3 offset-9">
+    <button
+     
+      (click)="nextCategorize()"
+      class="btn btn-round btn-success btn-block btn-lg float-right"
+    >
+      KATEGORİZE ET
+    </button>
+  </div>
+</div>
+
+
 <div
   class="modal fade"
   id="commentModal"
