--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -6,45 +6,45 @@
           <ul class="nav nav-pills nav-pills-primary nav-pills-icons justify-content-center tab-progress"
             role="tablist">
             <li class="nav-item active">
-              <a [ngClass]="{'disabled': true }" class="nav-link select-subject" data-toggle="tab" href="#subject"
+              <a  class="nav-link select-subject" data-toggle="tab" href="#subject"
                 role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Konu Seç
               </a>
             </li>
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link select-template" data-toggle="tab"
+              <a  class="nav-link select-template" data-toggle="tab"
                 href="#select-template" role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Şablon Seç
               </a>
             </li>
 
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link brainstorm" data-toggle="tab" href="#brainstorm"
+              <a  class="nav-link brainstorm" data-toggle="tab" href="#brainstorm"
                 role="tablist">
                 <i class="now-ui-icons objects_umbrella-13"></i> Fikir Geliştir
               </a>
             </li>
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link comments" data-toggle="tab" href="#comments"
+              <a  class="nav-link comments" data-toggle="tab" href="#comments"
                 role="tablist">
                 <i class="now-ui-icons shopping_shop"></i> Yorum Yap
               </a>
             </li>
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link categorize" data-toggle="tab" href="#categorize"
+              <a  class="nav-link categorize" data-toggle="tab" href="#categorize"
                 role="tablist">
                 <i class="now-ui-icons shopping_shop"> </i> Kategorize Et
               </a>
             </li>
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link multi-vote" data-toggle="tab" href="#vote"
+              <a  class="nav-link multi-vote" data-toggle="tab" href="#vote"
                 role="tablist">
                 <i class="now-ui-icons ui-2_settings-90"></i> Oyla
               </a>
             </li>
 
             <li class="nav-item">
-              <a [ngClass]="{'disabled': true }" class="nav-link idea-archive" data-toggle="tab" href="#idea-archive"
+              <a  class="nav-link idea-archive" data-toggle="tab" href="#idea-archive"
                 role="tablist">
                 <i class="now-ui-icons ui-2_settings-90"></i>Raporla
               </a>
